# open-source-llm

./: MEMORY.md  MVP_README.md  README.md  RULES.md  conversation_history.db  conversation_test.rs  copilot-instructions.md  integration_demo.py
.github/: copilot-instructions.md  release-drafter.yml
.github/workflows/: release-drafter.yml  rust.yml
inference/: convert.py  fp8_cast_bf16.py  generate.py  kernel.py  model.py
inference-re/: Cargo.toml
inference-re/src/: context.rs  lib.rs  model.rs
inference-re/tests/: chat_tests.rs  model_tests.rs
inference-rs/: Cargo.toml
inference-rs/src/: main.rs
mobile/: Cargo.toml  README.md
mobile/src/: ffi.rs  lib.rs  main.rs
mobile/tests/: ffi_tests.rs  runtime_tests.rs  tokenizer_tests.rs
src/pages/: WorldExperiencePage.tsx
tests/: test_sampling.py
