[package]
name = "mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
ndarray = "0.15"
inference-re = { path = "../inference-re" }
bytemuck = { version = "1.14", features = ["derive"] }
memmap2 = "0.5"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
tempfile = "3"
